# Trinity

./: .gitignore
libmdtrie/: CMakeLists.txt  clear_cache.sh
libmdtrie/bench/: b.cpp  benchmark.hpp  clocking_utils.hpp  common.hpp  deserialize.cpp  disk_benchmark.hpp  disk_example.cpp  drop_cache.cpp  example.cpp  fail.cpp  microbench.cpp  minimal.cpp  parser.hpp  real_data.cpp  serialize.cpp
libmdtrie/src/: bit_vector.h  bitmap.h  bitmap_array.h  compact_ptr.h  compact_vector.h  compressed_bitmap.h  data_point.h  defs.h  delta_encoded_array.h  device_vector.h  disk_bit_vector.h  disk_bitmap.h  disk_bitmap_array.h  disk_compact_ptr.h  disk_compact_vector.h  disk_compressed_bitmap.h  disk_delta_encoded_array.h  disk_std_vector.h  disk_tree_block.h  disk_trie.h  disk_trie_node.h  point_array.h  tree_block.h  trie.h  trie_node.h  utils.h
scripts/: trinity_microbench.sh
